# proto_bridge

./: .gitignore  Cargo.toml  Makefile  Package.swift  README.md  build.rs
.swiftpm/xcode/xcuserdata/juliusbrummack.xcuserdatad/xcschemes/: xcschememanagement.plist
Sources/proto_bridge/: bridge.swift  messaging.pb.swift
Sources/proto_bridge/src/: messaging.pb.swift
Tests/proto_bridgeTests/: proto_bridgeTests.swift
include/: libproto_bridge.h  module.modulemap
src/: bin.rs  fn.template  lib.rs  library.template  messaging.interface  messaging.proto
